GNOME Bugzilla – Bug 763201
cannot compile qt-gstreamer
Last modified: 2018-01-23 20:46:07 UTC
Cannot compile qt-gstreamer on mac hear is log. Vladimirs-MacBook-Pro:build vlad$ cd /Users/vlad/Downloads/qt-gstreamer-1.2.0/build Vladimirs-MacBook-Pro:build vlad$ cmake .. -DCMAKE_BUILD_TYPE=Debug -DQT_VERSION=5 -DCMAKE_INSTALL_PREFIX=/Users/vlad/qt-gstreamer -DCMAKE_CXX_COMPILER=clang++ -DQTGSTREAMER_CODEGEN=ON -- The C compiler identification is AppleClang 7.0.2.7000181 -- The CXX compiler identification is AppleClang 7.0.2.7000181 -- Check for working C compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc -- Check for working C compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc -- works -- Detecting C compiler ABI info -- Detecting C compiler ABI info - done -- Detecting C compile features -- Detecting C compile features - done -- Check for working CXX compiler: /usr/bin/clang++ -- Check for working CXX compiler: /usr/bin/clang++ -- works -- Detecting CXX compiler ABI info -- Detecting CXX compiler ABI info - done -- Detecting CXX compile features -- Detecting CXX compile features - done -- Using Qt5 (min: 5.0.0) -- Found Qt4or5: 1 found components: Core Gui Widgets OpenGL Quick1 Quick2 Qml Test -- Boost version: 1.54.0 -- Found PkgConfig: /usr/local/bin/pkg-config (found version "0.28") -- Checking for module 'gstreamer-1.0' -- Found gstreamer-1.0, version 1.7.90 -- Checking for module 'gstreamer-base-1.0' -- Found gstreamer-base-1.0, version 1.7.90 -- Found GSTREAMER_BASE_LIBRARY: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstbase-1.0.dylib -- Found GSTREAMER_BASE_INCLUDE_DIR: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/gstreamer-1.0 -- Found GStreamer: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstreamer-1.0.dylib (Required is at least version "1.0.0") -- Checking for module 'gstreamer-plugins-base-1.0' -- Found gstreamer-plugins-base-1.0, version 1.7.90 -- Checking for module 'gstreamer-app-1.0' -- Found gstreamer-app-1.0, version 1.7.90 -- Found GSTREAMER_APP_LIBRARY: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstapp-1.0.dylib -- Found GSTREAMER_APP_INCLUDE_DIR: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/gstreamer-1.0 -- Checking for module 'gstreamer-audio-1.0' -- Found gstreamer-audio-1.0, version 1.7.90 -- Found GSTREAMER_AUDIO_LIBRARY: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstaudio-1.0.dylib -- Found GSTREAMER_AUDIO_INCLUDE_DIR: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/gstreamer-1.0 -- Checking for module 'gstreamer-video-1.0' -- Found gstreamer-video-1.0, version 1.7.90 -- Found GSTREAMER_VIDEO_LIBRARY: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstvideo-1.0.dylib -- Found GSTREAMER_VIDEO_INCLUDE_DIR: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/gstreamer-1.0 -- Checking for module 'gstreamer-pbutils-1.0' -- Found gstreamer-pbutils-1.0, version 1.7.90 -- Found GSTREAMER_PBUTILS_LIBRARY: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libgstpbutils-1.0.dylib -- Found GSTREAMER_PBUTILS_INCLUDE_DIR: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/gstreamer-1.0 -- Found GStreamerPluginsBase: TRUE (Required is at least version "1.0.0") -- Checking for module 'glib-2.0' -- Found glib-2.0, version 2.46.2 -- Found GLIB2: /Library/Frameworks/GStreamer.framework/Versions/1.0/lib/libglib-2.0.dylib -- Checking for module 'gobject-2.0' -- Found gobject-2.0, version 2.46.2 -- Found GObject: /Library/Frameworks/GStreamer.framework/Versions/1.0/include/glib-2.0 -- Performing Test USE_OPENGLES -- Performing Test USE_OPENGLES - Failed -- Found OpenGL: /System/Library/Frameworks/OpenGL.framework -- Found FLEX: /usr/bin/flex (found version "2.5.35") -- Found BISON: /usr/bin/bison (found version "2.3") CMake Warning (dev) at examples/CMakeLists.txt:13 (get_target_property): Policy CMP0045 is not set: Error on non-existent target in get_target_property. Run "cmake --help-policy CMP0045" for policy details. Use the cmake_policy command to set the policy and suppress this warning. get_target_property() called with non-existent target "examples_distcheck". Call Stack (most recent call first): examples/CMakeLists.txt:22 (example_distcheck) This warning is for project developers. Use -Wno-dev to suppress it. -- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) ----------------------------------------------------------------------------- -- The following external packages were located on your system. -- This installation will have the extra features provided by these packages. ----------------------------------------------------------------------------- * Qt - Required for building everything * QtOpenGL - Required for OpenGL acceleration in qtvideosink and QtGStreamerUi * QtQuick1 (QtDeclarative) - Required for building QtQuick1 support * QtQuick2 (QtQuick) - Required for building QtQuick2 support * QtQml - Required for building QtQuick2 support * Boost - Required for building QtGLib * GStreamer - Required to build QtGStreamer * GStreamer base library - Used for building the qt5videosink element * GStreamer app library - Required to build QtGStreamerUtils * GStreamer audio library - Required to build QtGStreamer * GStreamer video library - Required to build QtGStreamer * GStreamer pbutils library - Used for building the Discoverer API * GLib - Required to build QtGLib * GObject - Required to build QtGLib * OpenGL - Required for OpenGL rendering support in qt5videosink * Flex - Required to build codegen, a helper code generator * Bison - Required to build codegen, a helper code generator ----------------------------------------------------------------------------- -- The following OPTIONAL packages could NOT be located on your system. -- Consider installing them to enable more features from this software. ----------------------------------------------------------------------------- * Doxygen <http://www.doxygen.org/> Used to generate the API documentation ----------------------------------------------------------------------------- -- Configuring done -- Generating done -- Build files have been written to: /Users/vlad/Downloads/qt-gstreamer-1.2.0/build Vladimirs-MacBook-Pro:build vlad$ make Scanning dependencies of target codegen_automoc [ 1%] Automatic moc for target codegen [ 1%] Built target codegen_automoc [ 2%] [FLEX][analyzer] Building scanner with flex 2.5.35 [ 3%] [BISON][parser] Building parser with bison 2.3 parser.y: conflicts: 6 shift/reduce Scanning dependencies of target codegen [ 3%] Building CXX object codegen/CMakeFiles/codegen.dir/analyzer.cpp.o /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:962:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register yy_state_type yy_current_state; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:963:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *yy_cp, *yy_bp; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:963:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *yy_cp, *yy_bp; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:964:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register int yy_act; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1013:4: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register YY_CHAR yy_c = yy_ec[YY_SC_TO_UI(*yy_cp)]; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1548:6: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *dest = YY_CURRENT_BUFFER_LVALUE->yy_ch_buf; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1549:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *source = (yytext_ptr); ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1550:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register int number_to_move, i; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1550:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register int number_to_move, i; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1682:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register yy_state_type yy_current_state; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1683:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *yy_cp; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1689:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register YY_CHAR yy_c = (*yy_cp ? yy_ec[YY_SC_TO_UI(*yy_... ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1714:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register int yy_is_jam; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1715:6: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *yy_cp = (yy_c_buf_p); ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1717:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register YY_CHAR yy_c = 1; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1737:2: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *yy_cp; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1747:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register yy_size_t number_to_move = (yy_n_chars) + 2; ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1748:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *dest = &YY_CURRENT_BUFFER_LVALUE->yy_ch_buf[ ^~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/build/codegen/analyzer.cpp:1750:3: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register char *source = ^~~~~~~~~ 19 warnings generated. [ 4%] Building CXX object codegen/CMakeFiles/codegen.dir/parser.cpp.o [ 5%] Building CXX object codegen/CMakeFiles/codegen.dir/generator.cpp.o [ 6%] Building CXX object codegen/CMakeFiles/codegen.dir/codegen_automoc.cpp.o [ 6%] Linking CXX executable codegen [ 6%] Built target codegen Scanning dependencies of target Qt5GLib_automoc [ 6%] Automatic moc for target Qt5GLib Generating connect.moc [ 6%] Built target Qt5GLib_automoc [ 7%] Generating ../../../src/QGlib/gen.cpp [ 7%] Copying gen.cpp to the build directory Scanning dependencies of target Qt5GLib [ 8%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/quark.cpp.o [ 8%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/type.cpp.o [ 9%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/paramspec.cpp.o [ 10%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/object.cpp.o [ 10%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/value.cpp.o /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/value.cpp:60:5: warning: 'g_value_get_char' is deprecated [-Wdeprecated-declarations] DECLARE_VTABLE(char, char, Type::Char) ^ /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/value.cpp:50:43: note: expanded from macro 'DECLARE_VTABLE' *reinterpret_cast<T*>(data) = g_value_get_##NICK(value); \ ^ <scratch space>:166:1: note: expanded from here g_value_get_char ^ /Library/Frameworks/GStreamer.framework/Versions/1.0/include/glib-2.0/gobject/gvaluetypes.h:182:23: note: 'g_value_get_char' has been explicitly marked deprecated here gchar g_value_get_char (const GValue *value); ^ /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/value.cpp:60:5: warning: 'g_value_set_char' is deprecated [-Wdeprecated-declarations] DECLARE_VTABLE(char, char, Type::Char) ^ /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/value.cpp:55:13: note: expanded from macro 'DECLARE_VTABLE' g_value_set_##NICK(value, *reinterpret_cast<T const *>(data)); \ ^ <scratch space>:167:1: note: expanded from here g_value_set_char ^ /Library/Frameworks/GStreamer.framework/Versions/1.0/include/glib-2.0/gobject/gvaluetypes.h:179:23: note: 'g_value_set_char' has been explicitly marked deprecated here void g_value_set_char (GValue *value, ^ 2 warnings generated. [ 11%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/signal.cpp.o [ 12%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/error.cpp.o [ 12%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/connect.cpp.o /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/connect.cpp:76:13: warning: expression result unused [-Wunused-value] dynamic_cast<const InvalidTypeException &>(e); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/connect.cpp:82:17: warning: expression result unused [-Wunused-value] dynamic_cast<const InvalidValueException &>(e); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/connect.cpp:395:5: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register] register bool ok = (m_handlerIdInRemoval != handlerId); ^~~~~~~~~ 3 warnings generated. [ 13%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/wrap.cpp.o [ 14%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/init.cpp.o /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGlib/init.cpp:29:5: warning: 'g_type_init' is deprecated [-Wdeprecated-declarations] g_type_init(); ^ /Library/Frameworks/GStreamer.framework/Versions/1.0/include/glib-2.0/gobject/gtype.h:681:23: note: 'g_type_init' has been explicitly marked deprecated here void g_type_init (void); ^ 1 warning generated. [ 14%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/gen.cpp.o [ 15%] Building CXX object src/QGlib/CMakeFiles/Qt5GLib.dir/Qt5GLib_automoc.cpp.o [ 16%] Linking CXX shared library libQt5GLib-2.0.dylib [ 16%] Built target Qt5GLib Scanning dependencies of target Qt5GStreamer_automoc [ 17%] Automatic moc for target Qt5GStreamer [ 17%] Built target Qt5GStreamer_automoc [ 18%] Generating ../../../src/QGst/gen.cpp [ 19%] Copying gen.cpp to the build directory Scanning dependencies of target Qt5GStreamer [ 20%] Building CXX object src/QGst/CMakeFiles/Qt5GStreamer.dir/init.cpp.o In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/init.cpp:17: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/init.h:20: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/global.h:32: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/../QGlib/type.h:22: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/../QGlib/global.h:25: In file included from /Users/vlad/Qt5.5.1/5.5/clang_64/lib/QtCore.framework/Headers/QtGlobal:1: In file included from /Users/vlad/Qt5.5.1/5.5/clang_64/lib/QtCore.framework/Headers/qglobal.h:85: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:628: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/memory:1: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/memory.h:21: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/miniobject.h:21: In file included from /Users/vlad/Downloads/qt-gstreamer-1.2.0/src/QGst/../QGlib/refpointer.h:26: In file included from /Users/vlad/boost/include/boost/type_traits.hpp:49: In file included from /Users/vlad/boost/include/boost/type_traits/is_complex.hpp:12: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/complex:247: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/sstream:174: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/ostream:138: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/ios:216: In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__locale:15: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:967:16: error: no member named '__search' in namespace 'std::__1' _VSTD::__search(__p + __pos, __p + __sz, ~~~~~~~^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1002:20: error: no member named 'min' in namespace 'std::__1' __pos = _VSTD::min(__pos, __sz); ~~~~~~~^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1007:32: error: no member named '__find_end' in namespace 'std::__1' const _CharT* __r = _VSTD::__find_end( ~~~~~~~^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1023:32: error: no member named '__find_first_of_ce' in namespace 'std::__1' const _CharT* __r = _VSTD::__find_first_of_ce ~~~~~~~^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1123:12: error: use of undeclared identifier '__murmur2_or_cityhash' return __murmur2_or_cityhash<size_t>()(__p, (__e-__p)*sizeof(value_type)); ^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1123:34: error: unexpected type name 'size_t': expected expression return __murmur2_or_cityhash<size_t>()(__p, (__e-__p)*sizeof(value_type)); ^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1123:42: error: expected expression return __murmur2_or_cityhash<size_t>()(__p, (__e-__p)*sizeof(value_type)); ^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1212:13: error: unknown type name 'allocator_traits'; did you mean 'allocator_arg_t'? typedef allocator_traits<allocator_type> __alloc_traits; ^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__functional_base:545:30: note: 'allocator_arg_t' declared here struct _LIBCPP_TYPE_VIS_ONLY allocator_arg_t { }; ^
That looks like a configuration issue. Search for the error " no member named '__search' in namespace 'std::__1'" Try adding suggestions from: https://cplusplusmusings.wordpress.com/2012/07/05/clang-and-standard-libraries-on-mac-os-x/ Or switch to gcc instead of clang.
The problem is: clang in algoritm include memory from project not from stl. Changing names from memory.* to memoryGst.* (including Memory file) solved problem (CMakeLists.txt should be fixed).
Oh that problem... I had a test fix for it... https://github.com/detrout/qt-gstreamer/tree/fix-memory Could you check that's still the right solution? If yes, I think I can finally commit it to the freedesktop repository.
sorry it does not work. renaming works for me. sorry for delay I had problems with gtk compiling
Yup, same finding here. This does not fix the problem. Build still fails. However, this does fix it: https://github.com/detrout/qt-gstreamer/pull/7
ilovezfs's patch works for me as well. Please help us get a fix for this merged soon...
It is exactly what I have done
Ok I made some progress. I managed to setup an OS X test environment, fought past the currently buggy networking, and tested freedesktop master, my fix-memory patch, and ilovezfs's qtgstreamer-memory patch and verified that only ilovezfs's fixes it. I do need to try building on linux with ilovezfs's fix to make sure that works.
Nice. Thanks for the update!
Did you have a chance to give it a spin on Linux?
(In reply to ilovezfs from comment #10) > Did you have a chance to give it a spin on Linux? Yes I managed to test it on linux, looks good, unfortunately got sent to a conference for the today through rest of week. Not sure when I'll have a chance to push the commit to freedesktop. Worst case is this weekend. Diane
Thanks for the update! :)
Created attachment 330042 [details] [review] "Memory" collides with standard lib's "memory" on case-insensitive file systems. This is actually a patch from ilovezfs, but that came via my github mirror of freedesktop. I tested it on os x and it does fix the problem and doesn't seem to introduce any issues on Linux Its makes the imports little repetitive, but memory is indeed a pretty generic name, so its not surprising it collides.
I wonder also if there should be a single include header that includes all the others? or at least all the other core ones? (unless there is already and I missed it)
(In reply to Tim-Philipp Müller from comment #14) > I wonder also if there should be a single include header that includes all > the others? or at least all the other core ones? (unless there is already > and I missed it) Usually I see KDE/Qt projects using a lot of specific includes, while GNOME style projects tend to prefer using a master include. Grabbing a random example I'm familiar with... https://quickgit.kde.org/?p=ktp-text-ui.git&a=blob&h=babcb574c55ad4e3c990f8724a99f38efeb55769&hb=d43521677f86afda9037b2c0dfa1f9e2db9334d8&f=app%2Fchat-window.cpp You can see it uses several specific includes for classes in KTp/ and TelepathyQt/ and that's two libraries developed by the same people as who were writing ktp-text-ui. I'm not sure what the motivation for the difference between GNOME & KDE/Qt projects is, other than I've observed it.
Status? It should not need 6 months to fix such a small issue...
@(In reply to Jake Petroules from comment #16) > Status? It should not need 6 months to fix such a small issue... Does the patch listed above work for you? QtGStreamer spans several complex technology stacks so its difficult to find developers who have time to work on it.
No longer working on this project but it looks like the listed patch should solve the problem.
qt-gstreamer is unmaintained. However, I just pushed this to master: commit fac0b07d22bcd0ad4ae82651ac430ede500b2d1a Author: ilovezfs <ilovezfs@icloud.com> Date: Fri May 6 00:52:46 2016 -0700 Fix QGst/Memory bug on case-insensitive fs "Memory" collides with standard lib's "memory" on case-insensitive file systems. See https://bugzilla.gnome.org/show_bug.cgi?id=763201 Probably still better in any case than having it rot in bugzilla.
*** Bug 733788 has been marked as a duplicate of this bug. ***
*** Bug 780437 has been marked as a duplicate of this bug. ***