Fix QGst/Memory bug on case-insensitive fs

"Memory" collides with standard lib's "memory" on case-insensitive
file systems.

See https://bugzilla.gnome.org/show_bug.cgi?id=763201